added about page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <!-- Mirrored from dev.knox.co.ke/ by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Aug 2018 08:00:45 GMT -->
@@ -15,14 +15,14 @@
 <link href="themes/frontend/css/bootstrap.min.css" rel="stylesheet">
 <link href="themes/frontend/css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet">
-<link href="themes/frontend/css/slick.min.css" rel="stylesheet">
+<link href="themes/frontend/css/slick.min.css" rel="stylesheet">   
 <link href="themes/frontend/css/slick-theme.min.css" rel="stylesheet">
 <link href="themes/frontend/plugins/owl/owl.carousel.css" rel="stylesheet">
 <link href="themes/frontend/plugins/owl/owl.theme.css" rel="stylesheet">
 <link href="themes/frontend/plugins/vegas/vegas.min.css" rel="stylesheet">
 <link href="themes/frontend/css/styles.min.css" rel="stylesheet">
 <link href="themes/frontend/css/frontendd28d.css?v=1.8" rel="stylesheet">
-<link href="themes/frontend/css/responsive3cc5.css?v=1.6" rel="stylesheet">    <title>Knox Pesa - Easy Salary Advance Loans and Micro short term Loans</title>
+<link href="themes/frontend/css/responsive3cc5.css?v=1.6" rel="stylesheet"><title>Knox Pesa - Easy Salary Advance Loans and Micro short term Loans</title>
     <meta property="og:title" content="Knox Pesa - Easy Salary Advance Loans and Micro short term Loans"/>
 <meta property="og:type" content="website"/>
 <meta property="og:image" content="uploads/logo.png"/>
@@ -40,7 +40,7 @@
 
 </script></head>
 <body>
-        <header id="header" data-parallax="scroll" data-speed="0.2" data-natural-width="" data-natural-height="" data-image-src="/themes/frontend/images/bgs/bg20.jpg">
+        <header id="header" data-parallax="scroll" data-speed="0.2" data-natural-width="" data-natural-height="" data-image-src="themes/frontend/images/bgs/bg20.jpg">
        <nav id="navigation" class="navbar scrollspy">
 	<div class="container">
 		<div class="row">
@@ -49,11 +49,11 @@
 			</div>
 			<ul class="nav navbar-nav">
 				<li><a href="index.html" class="smooth-scroll">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="about.html">About Us</a></li> 
 				<!-- <li><a href="/welcome/more" class="smooth-scroll">Features</a></li> -->
 				<!-- <li><a href="/welcome/products">Our Products</a></li> -->
-								<li><a href="account/login.html">Login</a></li>
-								<li class="menu-btn"><a href="account/signup.html">Employer Sign Up</a></li>
+								<li><a href="login.html">Login</a></li>
+								<li class="menu-btn"><a href="signup.html">Employer Sign Up</a></li>
 			</ul>
 		</div>
 	</div>
