--- a/products/logbooks.html
+++ b/products/logbooks.html
@@ -9,20 +9,20 @@
 <meta name="description" content="Delivering easy salary advance loans and micro short term loans to employees, Sacco members, Investment groups (Chamas) members and more when they need it most. No questions asked!" />
 <meta name="keywords" content="Borrow loan, salary advance loans, online loan,loans to your mpesa,mobile money, instant mpesa loan,loan app" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<noscript><link rel="stylesheet" href="../themes/frontend/css/no-js.css"></noscript>
+<noscript><link rel="stylesheet" href="themes/frontend/css/no-js.css"></noscript>
 <link rel="shortcut icon" type="image/x-icon" href="../favicon.html">    <link href="https://fonts.googleapis.com/css?family=Poppins:400,300,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-<link href="../themes/frontend/css/bootstrap.min.css" rel="stylesheet">
-<link href="../themes/frontend/css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="themes/frontend/css/bootstrap.min.css" rel="stylesheet">
+<link href="themes/frontend/css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet">
-<link href="../themes/frontend/css/slick.min.css" rel="stylesheet">
-<link href="../themes/frontend/css/slick-theme.min.css" rel="stylesheet">
-<link href="../themes/frontend/plugins/owl/owl.carousel.css" rel="stylesheet">
-<link href="../themes/frontend/plugins/owl/owl.theme.css" rel="stylesheet">
-<link href="../themes/frontend/plugins/vegas/vegas.min.css" rel="stylesheet">
-<link href="../themes/frontend/css/styles.min.css" rel="stylesheet">
-<link href="../themes/frontend/css/frontendd28d.css?v=1.8" rel="stylesheet">
-<link href="../themes/frontend/css/responsive3cc5.css?v=1.6" rel="stylesheet">    <title>Log Book Loans up to Ksh 5M in 5 Minutes at 5%</title>
+<link href="themes/frontend/css/slick.min.css" rel="stylesheet">
+<link href="themes/frontend/css/slick-theme.min.css" rel="stylesheet">
+<link href="themes/frontend/plugins/owl/owl.carousel.css" rel="stylesheet">
+<link href="themes/frontend/plugins/owl/owl.theme.css" rel="stylesheet">
+<link href="themes/frontend/plugins/vegas/vegas.min.css" rel="stylesheet">
+<link href="themes/frontend/css/styles.min.css" rel="stylesheet">
+<link href="themes/frontend/css/frontendd28d.css?v=1.8" rel="stylesheet">
+<link href="themes/frontend/css/responsive3cc5.css?v=1.6" rel="stylesheet">    <title>Log Book Loans up to Ksh 5M in 5 Minutes at 5%</title>
     <meta property="og:title" content="Log Book Loans up to Ksh 5M in 5 Minutes at 5%"/>
 <meta property="og:type" content="website"/>
 <meta property="og:image" content="../uploads/logbook.jpg"/>
@@ -40,7 +40,7 @@
 
 </script></head>
 <body>
-        <header id="header" data-parallax="scroll" data-speed="0.2" data-natural-width="" data-natural-height="" data-image-src="/themes/frontend/images/bgs/bg20.jpg">
+        <header id="header" data-parallax="scroll" data-speed="0.2" data-natural-width="" data-natural-height="" data-image-src="themes/frontend/images/bgs/bg20.jpg">
                      		 
    	       </header>
      <div class="wrap-container8060 logbook-container">
@@ -822,29 +822,29 @@ a.yii-debug-toolbar__label:focus {
         };
     }
 
-})();</script><script src="../themes/frontend/js/jquery.min.js"></script>
+})();</script><script src="themes/frontend/js/jquery.min.js"></script>
 <script src="../assets/5f658b585c986715ca5e1c5049f6328a/yii.js"></script>
-<script src="../themes/frontend/js/jquery-migrate-1.2.1.min.js"></script>
-<script src="../themes/frontend/js/bootstrap.min.js"></script>
-<script src="../themes/frontend/js/bootstrap-switch.min.js"></script>
-<script src="../themes/frontend/js/jquery.easing.min.js"></script>
-<script src="../themes/frontend/js/smoothscroll.js"></script>
-<script src="../themes/frontend/js/response.min.js"></script>
-<script src="../themes/frontend/js/jquery.placeholder.min.js"></script>
-<script src="../themes/frontend/js/jquery.fitvids.js"></script>
-<script src="../themes/frontend/js/jquery.imgpreload.min.js"></script>
-<script src="../themes/frontend/js/waypoints.min.js"></script>
-<script src="../themes/frontend/js/slick.min.js"></script>
-<script src="../themes/frontend/js/jquery.mousewheel-3.0.6.pack.js"></script>
-<script src="../themes/frontend/js/jquery.fancybox.pack.js"></script>
-<script src="../themes/frontend/js/jquery.fancybox-media.js"></script>
-<script src="../themes/frontend/js/parallax.min.js"></script>
-<script src="../themes/frontend/js/jquery.counterup.min.js"></script>
-<script src="../themes/frontend/js/isotope.pkgd.min.js"></script>
-<script src="../themes/frontend/js/script.js"></script>
-<script src="../themes/frontend/plugins/vegas/vegas.min.js"></script>
-<script src="../themes/frontend/plugins/owl/owl.carousel.min.js"></script>
-<script src="../themes/frontend/js/plugins.js"></script>     <script src="../themes/frontend/js/jquery.form-validator.min.js"></script>
+<script src="themes/frontend/js/jquery-migrate-1.2.1.min.js"></script>
+<script src="themes/frontend/js/bootstrap.min.js"></script>
+<script src="themes/frontend/js/bootstrap-switch.min.js"></script>
+<script src="themes/frontend/js/jquery.easing.min.js"></script>
+<script src="themes/frontend/js/smoothscroll.js"></script>
+<script src="themes/frontend/js/response.min.js"></script>
+<script src="themes/frontend/js/jquery.placeholder.min.js"></script>
+<script src="themes/frontend/js/jquery.fitvids.js"></script>
+<script src="themes/frontend/js/jquery.imgpreload.min.js"></script>
+<script src="themes/frontend/js/waypoints.min.js"></script>
+<script src="themes/frontend/js/slick.min.js"></script>
+<script src="themes/frontend/js/jquery.mousewheel-3.0.6.pack.js"></script>
+<script src="themes/frontend/js/jquery.fancybox.pack.js"></script>
+<script src="themes/frontend/js/jquery.fancybox-media.js"></script>
+<script src="themes/frontend/js/parallax.min.js"></script>
+<script src="themes/frontend/js/jquery.counterup.min.js"></script>
+<script src="themes/frontend/js/isotope.pkgd.min.js"></script>
+<script src="themes/frontend/js/script.js"></script>
+<script src="themes/frontend/plugins/vegas/vegas.min.js"></script>
+<script src="themes/frontend/plugins/owl/owl.carousel.min.js"></script>
+<script src="themes/frontend/js/plugins.js"></script>     <script src="themes/frontend/js/jquery.form-validator.min.js"></script>
  	<script type="text/javascript">
         $.validate({
            lang: 'en'
