--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from dev.knox.co.ke/account/forgotpassword by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Aug 2018 08:04:01 GMT -->
+<!-- Mirrored from dev.knox.co.ke/account/login by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Aug 2018 08:03:03 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
 	<meta charset="UTF-8">
@@ -9,25 +9,25 @@
 <meta name="description" content="Delivering easy salary advance loans and micro short term loans to employees, Sacco members, Investment groups (Chamas) members and more when they need it most. No questions asked!" />
 <meta name="keywords" content="Borrow loan, salary advance loans, online loan,loans to your mpesa,mobile money, instant mpesa loan,loan app" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<noscript><link rel="stylesheet" href="../themes/frontend/css/no-js.css"></noscript>
+<noscript><link rel="stylesheet" href="themes/frontend/css/no-js.css"></noscript>
 <link rel="shortcut icon" type="image/x-icon" href="../favicon.html">    <link href="https://fonts.googleapis.com/css?family=Poppins:400,300,600,700" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-<link href="../themes/frontend/css/bootstrap.min.css" rel="stylesheet">
-<link href="../themes/frontend/css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+<link href="themes/frontend/css/bootstrap.min.css" rel="stylesheet">
+<link href="themes/frontend/css/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet">
-<link href="../themes/frontend/css/slick.min.css" rel="stylesheet">
-<link href="../themes/frontend/css/slick-theme.min.css" rel="stylesheet">
-<link href="../themes/frontend/plugins/owl/owl.carousel.css" rel="stylesheet">
-<link href="../themes/frontend/plugins/owl/owl.theme.css" rel="stylesheet">
-<link href="../themes/frontend/plugins/vegas/vegas.min.css" rel="stylesheet">
-<link href="../themes/frontend/css/styles.min.css" rel="stylesheet">
-<link href="../themes/frontend/css/frontendd28d.css?v=1.8" rel="stylesheet">
-<link href="../themes/frontend/css/responsive3cc5.css?v=1.6" rel="stylesheet">    <title>Forgot Password</title>
-    <meta property="og:title" content="Forgot Password"/>
+<link href="themes/frontend/css/slick.min.css" rel="stylesheet">
+<link href="themes/frontend/css/slick-theme.min.css" rel="stylesheet">
+<link href="themes/frontend/plugins/owl/owl.carousel.css" rel="stylesheet">
+<link href="themes/frontend/plugins/owl/owl.theme.css" rel="stylesheet">
+<link href="themes/frontend/plugins/vegas/vegas.min.css" rel="stylesheet">
+<link href="themes/frontend/css/styles.min.css" rel="stylesheet">
+<link href="themes/frontend/css/frontendd28d.css?v=1.8" rel="stylesheet">
+<link href="themes/frontend/css/responsive3cc5.css?v=1.6" rel="stylesheet">    <title>Welcome to Knox Pesa : Login</title>
+    <meta property="og:title" content="Welcome to Knox Pesa : Login"/>
 <meta property="og:type" content="website"/>
 <meta property="og:image" content="../uploads/logo.png"/>
 <meta property="og:site_name" content="Knox Pesa"/>
-<meta property="og:url" content="forgotpassword.html"/>
+<meta property="og:url" content="login.html"/>
 <meta property="og:description" content="Delivering easy salary advance loans and micro short term loans to employees, Sacco members, Investment groups (Chamas) members and more when they need it most. No questions asked!"/>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -40,15 +40,15 @@
 
 </script></head>
 <body>
-        <header id="header" data-parallax="scroll" data-speed="0.2" data-natural-width="" data-natural-height="" data-image-src="/themes/frontend/images/bgs/bg20.jpg">
+        <header id="header" data-parallax="scroll" data-speed="0.2" data-natural-width="" data-natural-height="" data-image-src="themes/frontend/images/bgs/bg20.jpg">
        <nav id="navigation" class="navbar scrollspy">
 	<div class="container">
 		<div class="row">
 			<div class="navbar-brand">
-				<a href="../index.html"><img src="../themes/frontend/images/logos/front-logo-new.png" alt="Logo" /></a>
+				<a href="index.html"><img src="themes/frontend/images/logos/front-logo-new.png" alt="Logo" /></a>
 			</div>
 			<ul class="nav navbar-nav">
-				<li><a href="../index.html" class="smooth-scroll">Home</a></li>
+				<li><a href="index.html" class="smooth-scroll">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
 				<!-- <li><a href="/welcome/more" class="smooth-scroll">Features</a></li> -->
 				<!-- <li><a href="/welcome/products">Our Products</a></li> -->
@@ -58,10 +58,10 @@
 		</div>
 	</div>
 </nav>
-              		     <div class="page-header-overlay">
+        <div class="page-header-overlay">
     <div class="container">
         <div align="center" class="page-header-text">
-            <h2>Forgot Password</h2>
+            <h2>Welcome to Knox Pesa : Login</h2>
         </div>
     </div>
 </div>
@@ -69,23 +69,28 @@
    	       </header>
      <div class="wrap-container8060">
 	<div class="container">
-		<form id="w0" action="http://dev.knox.co.ke/account/forgotpassword" method="post">
-<input type="hidden" name="_csrf" value="AoWpjeIbhJAdpAol7SrH-gSIJjyyAQj3LTCODyjBC5ZeTPDSYGppMOpNLE7U-g5fNU5oDMBiCZ9Gx_rIAY4JsQ==">		<div class="col-md-6 col-md-offset-3">
-					<div class="eva-account-form boxed">
-			<div class="">
-				<div class="form-group padded-form-group">
-					<label>Enter your Account Phone Number</label>
-					<input class="form-control" type="text" data-validation="required" name="user_phone">
-				</div>
-				<div class="form-group padded-form-group">
-					<center><button class="menu-btn">Get Reset Code</button></center>
-				</div>
-			</div>
+		<div class="col-md-6 col-md-offset-3">
+			<div class="boxed">
+								<form id="w0" action="http://dev.knox.co.ke/account/login" method="post">
+<input type="hidden" name="_csrf" value="Rml_NC8fBT-yYk3gJz0TteLk4Ux_5n926S2MGY4J36IaoCZrrW7on0WLa4se7doQ0yKvfA2Ffh6C2vjep0bdhQ==">					<div class="form-group">
+						<label>Email Address</label>
+						<input type="email" data-validation="required email" name="user_email" class="form-control">
+					</div>
+					<div class="form-group">
+						<label>Password</label>
+						<input autocomplete="off" readonly onfocus="this.removeAttribute('readonly');" type="password" data-validation="required" name="user_password" class="form-control">
+					</div>
+					<div class="form-group">
+						<a href="forgotpassword.html">Forgot Password?</a>
+					</div>
+					<div class="form-group pull-right">
+						<button class="menu-btn">Login</button>
+					</div>
+					<span class="clearfix"></span>
+				</form>			</div>
 		</div>
 		<span class="clearfix"></span>
 	</div>
-		<br>
-	</form>	</div>
 </div>         <footer style="text-align: center" id="footer">
         <div class="container padding-bottom20">
             <div class="row">
@@ -123,7 +128,7 @@
         </div>
     </footer>
     <a href="#" class="scrollup" title="Back to Top!">Scroll</a>
-    <div id="yii-debug-toolbar" data-url="/debug/default/toolbar?tag=5b62bab713ad6" style="display:none" class="yii-debug-toolbar-bottom"></div><style>
+    <div id="yii-debug-toolbar" data-url="/debug/default/toolbar?tag=5b62ba3d115a7" style="display:none" class="yii-debug-toolbar-bottom"></div><style>
 #yii-debug-toolbar-logo {
     position: fixed;
     right: 31px;
@@ -808,33 +813,33 @@ a.yii-debug-toolbar__label:focus {
         };
     }
 
-})();</script><script src="../themes/frontend/js/jquery.min.js"></script>
+})();</script><script src="themes/frontend/js/jquery.min.js"></script>
 <script src="../assets/5f658b585c986715ca5e1c5049f6328a/yii.js"></script>
 <script src="../assets/5f658b585c986715ca5e1c5049f6328a/yii.activeForm.js"></script>
-<script src="../themes/frontend/js/jquery-migrate-1.2.1.min.js"></script>
-<script src="../themes/frontend/js/bootstrap.min.js"></script>
-<script src="../themes/frontend/js/bootstrap-switch.min.js"></script>
-<script src="../themes/frontend/js/jquery.easing.min.js"></script>
-<script src="../themes/frontend/js/smoothscroll.js"></script>
-<script src="../themes/frontend/js/response.min.js"></script>
-<script src="../themes/frontend/js/jquery.placeholder.min.js"></script>
-<script src="../themes/frontend/js/jquery.fitvids.js"></script>
-<script src="../themes/frontend/js/jquery.imgpreload.min.js"></script>
-<script src="../themes/frontend/js/waypoints.min.js"></script>
-<script src="../themes/frontend/js/slick.min.js"></script>
-<script src="../themes/frontend/js/jquery.mousewheel-3.0.6.pack.js"></script>
-<script src="../themes/frontend/js/jquery.fancybox.pack.js"></script>
-<script src="../themes/frontend/js/jquery.fancybox-media.js"></script>
-<script src="../themes/frontend/js/parallax.min.js"></script>
-<script src="../themes/frontend/js/jquery.counterup.min.js"></script>
-<script src="../themes/frontend/js/isotope.pkgd.min.js"></script>
-<script src="../themes/frontend/js/script.js"></script>
-<script src="../themes/frontend/plugins/vegas/vegas.min.js"></script>
-<script src="../themes/frontend/plugins/owl/owl.carousel.min.js"></script>
-<script src="../themes/frontend/js/plugins.js"></script>
+<script src="themes/frontend/js/jquery-migrate-1.2.1.min.js"></script>
+<script src="themes/frontend/js/bootstrap.min.js"></script>
+<script src="themes/frontend/js/bootstrap-switch.min.js"></script>
+<script src="themes/frontend/js/jquery.easing.min.js"></script>
+<script src="themes/frontend/js/smoothscroll.js"></script>
+<script src="themes/frontend/js/response.min.js"></script>
+<script src="themes/frontend/js/jquery.placeholder.min.js"></script>
+<script src="themes/frontend/js/jquery.fitvids.js"></script>
+<script src="themes/frontend/js/jquery.imgpreload.min.js"></script>
+<script src="themes/frontend/js/waypoints.min.js"></script>
+<script src="themes/frontend/js/slick.min.js"></script>
+<script src="themes/frontend/js/jquery.mousewheel-3.0.6.pack.js"></script>
+<script src="themes/frontend/js/jquery.fancybox.pack.js"></script>
+<script src="themes/frontend/js/jquery.fancybox-media.js"></script>
+<script src="themes/frontend/js/parallax.min.js"></script>
+<script src="themes/frontend/js/jquery.counterup.min.js"></script>
+<script src="themes/frontend/js/isotope.pkgd.min.js"></script>
+<script src="themes/frontend/js/script.js"></script>
+<script src="themes/frontend/plugins/vegas/vegas.min.js"></script>
+<script src="themes/frontend/plugins/owl/owl.carousel.min.js"></script>
+<script src="themes/frontend/js/plugins.js"></script>
 <script type="text/javascript">jQuery(document).ready(function () {
 jQuery('#w0').yiiActiveForm([], []);
-});</script>     <script src="../themes/frontend/js/jquery.form-validator.min.js"></script>
+});</script>     <script src="themes/frontend/js/jquery.form-validator.min.js"></script>
  	<script type="text/javascript">
         $.validate({
            lang: 'en'
@@ -856,5 +861,5 @@ $('[data-toggle="tooltip"]').tooltip();
 </script>
 <!--End of Tawk.to Script--></body>
 
-<!-- Mirrored from dev.knox.co.ke/account/forgotpassword by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Aug 2018 08:04:01 GMT -->
+<!-- Mirrored from dev.knox.co.ke/account/login by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 02 Aug 2018 08:03:07 GMT -->
 </html>
